# canvas-sync

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.shared  Makefile  README.md  app.cc  app.h  app.ui  assets.qrc  canvas.cc  canvas.h  clickable_tree_view.cc  clickable_tree_view.cpp  clickable_tree_view.h  compile_commands.json  convert.cc  convert.h  filetree.cc  filetree.h  main.cc  mainwindow.cc  mainwindow.cc.bak  mainwindow.cpp  mainwindow.h  mainwindow.ui  samplewidget.cc  samplewidget.cpp  samplewidget.h  tree.cc  tree.h  tree_model.cc  tree_model.h  types.cc  types.h  updates.cc  updates.h  updates.ui
.github/workflows/: ci.yml  qt-static.yml  release.yml  windows.yml
app/: CMakeLists.txt  canvas.cc  canvas.h  clickable_tree_view.cc  convert.cc  filetree.h  local.mk  main.cc  mainwindow.cc  mainwindow.h  settings.cc  tree_model.cc  tree_model.h  types.cc  types.h  updates.h
app/deploy/: canvas-sync.qrc  mac-readme.txt
app/include/: CMakeLists.txt
app/include/csync/: canvas.h  canvas_sync.h  clickable_tree_view.h  mainwindow.h  mainwindow.ui  settings.h  tree_model.h  ui_mainwindow.h  ui_updates.h  updates.h
assets/app-icon/: build-icns.sh
config/: config.xml
csrv/: CMakeLists.txt  Makefile  canvas_api.cc  canvas_api.h  canvas_api_test.cc  cert.pem  compile_commands.json  csrv.h  debug.h  errors.cc  errors.h  filetree.cc  filetree.h  filetree_test.cc  httpclient.h  httpjson.cc  httpjson.h  main.cc  main.h.in  no-fail  server.cc  server.h  types.cc  types.h
csrv/debug/: CMakeLists.txt  Makefile  compile_commands.json  main.cc
deploy/: build-icns  build-icns.sh  canvas-sync.icns  icon.afdesign
deploy/windows/config/: config.xml
lib/: CMakeLists.txt  convert.cc  csync.cc  filetree.cc  settings.cc  tree_model.cc  tree_view.cc  updates.cc
lib/include/csync/: canvas.h  csync.h  settings.h  tree_model.h  tree_view.h
scripts/: ci.sh
test/: CMakeLists.txt  fake_canvas.cc  fake_canvas.h  main.cc  main.h
ui/: .gitignore  CMakeLists.txt  modal.cc  modal.ui  oneshotbutton.cc  pushbutton.cc  pushbutton.ui
ui/include/csui/: modal.h  oneshotbutton.h  pushbutton.h
